--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,19 @@
   "name": "Booktrack",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "dev": "parcel src/index.html"
+  },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   },
-  "scripts": {
+  "devDependencies": {
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "parcel": "^2.7.0",
+    "prettier": "^2.7.1",
+    "process": "^0.11.10"
   }
 }
