--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
