--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "parcel src/index.html"
   },
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
@@ -19,6 +20,5 @@
     "parcel": "^2.7.0",
     "prettier": "^2.7.1",
     "process": "^0.11.10"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
