--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
