--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.6.0",
     "react-modal": "^3.15.1",
     "react-router-dom": "^6.3.0",
+    "recharts": "^2.1.16",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
