--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "parcel src/index.html"
+    "dev": "npm install && parcel src/index.html"
   },
   "dependencies": {
     "react": "^18.2.0",
